<resources>
    <string name="app_name">Ethastra</string>

    <string name="title1">Pay Offline</string>
    <string name="title2">Encrypted SMS</string>
    <string name="title3">Secure Payment</string>

    <string name="discription1">Using power of encryption and blockchain, trade cryptocurrencies offline without internet.</string>
    <string name="discription2">All the messages are end to end encrypted. No service provider or police will be able to get your personal information.</string>
    <string name="discription3">On our server, we are handling all the messages and making secure messages with proper response.</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="get_registered">New here? Signup</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="public_key">Public Key</string>
    <string name="textview">TextView</string>
    <string name="view_balance">View Balance</string>
</resources>